# csc-marker-benchmark

./: .gitignore  BIORXIV_SUBMISSION.md  CSC_Bioinformatics_Beginner_Guide.md  CSC_Pipeline_Colab.ipynb  MI_project_plan.md  README.md  SUBMISSION_GUIDE.md  project_csc_background_knowledge.md  project_csc_research.md  requirements.txt
cscbench/: LICENSE  README.md  pyproject.toml
cscbench/cscbench/: __init__.py  benchmark.py  functional.py
cscbench/examples/: reproduce_benchmark.py
cscbench/tests/: test_cscbench.py
manuscript/: CSC_marker_benchmark.docx  benchmark_expansion_scoping.md  cover_letter.md  manuscript_draft.md  results_functional_benchmark.md
manuscript2/: CSC_immune.docx  cover_letter.md  immune_manuscript_draft.md
notebooks/: build_biorxiv.py  build_docx.py  build_pdf.py  build_pdf2.py  phase_A2_QC.py  phase_A3_clustering.py  phase_A4_annotation.py  phase_A5_csc_scoring.py  phase_A6_trajectory.py  phase_B1_gbm_pipeline.py  phase_B2_gbm_refined.py  phase_B3_melanoma_pipeline.py  phase_F1_functional_benchmark.py  phase_F2_citeseq_protein_benchmark.py  phase_F3_candidate_annotation.py  phase_F4_baseline_benchmark.py  phase_F5_multicancer_benchmark.py  phase_F6_crispr_validation.py  phase_FIG1_clean.py  phase_FIG_publication.py  phase_G1G2_tokenize.py  phase_G3_finetune.py  phase_G6_reliability.py  phase_G7_cox_surface.py  phase_G8_ssgsea_survival.py  phase_G_geneformer_csc.py  phase_I1_immune_evasion.py  phase_I2_spatial_exclusion.py  phase_I3_protein_exhaustion.py  phase_I4_checkpoint_axis.py  phase_I5_subtype_stratified.py  phase_M1b_attribution.py  (+5 more)
(+43 files in other folders)
