[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cscbench"
version = "0.1.0"
description = "Functional benchmarking of cancer stem cell marker-ranking methods"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Independent Researcher" }]
keywords = ["cancer stem cells", "benchmarking", "single-cell", "marker genes",
            "differential expression", "transformer attention"]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cscbench*"]
